--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <a href="#">ARTIKEL</a>
             <a href="#">MEMBER</a>
             <a href="#">KONTAK</a>
-            <a href="#">ABOUT US</a>
+            <a href="#">Tentang</a>
         </div>
     </div>
     <div id="content">
